// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as Pressable when onPress provided 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      [
        {
          "backgroundColor": "white",
          "borderRadius": 8,
          "overflow": "hidden",
          "padding": 14,
        },
        undefined,
      ],
      {
        "overflow": "hidden",
      },
    ]
  }
>
  <Text>
    Clickable card
  </Text>
</View>
`;

exports[`renders as View when no onPress provided 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "white",
        "borderRadius": 8,
        "padding": 14,
      },
      undefined,
    ]
  }
>
  <Text>
    Static card
  </Text>
</View>
`;

exports[`renders correctly with children 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "white",
        "borderRadius": 8,
        "padding": 14,
      },
      undefined,
    ]
  }
>
  <Text>
    Card content
  </Text>
</View>
`;
